<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_summary"
            android:icon="@drawable/ic_summary"
            android:title="@string/nav_drawer_summary"/>
        <item
            android:id="@+id/nav_drawer_weather"
            android:icon="@drawable/ic_weather"
            android:title="@string/nav_drawer_weather"/>
        <item
            android:id="@+id/nav_drawer_tasks"
            android:icon="@drawable/ic_tasks"
            android:title="@string/nav_drawer_tasks"/>
        <item
            android:id="@+id/nav_drawer_birthdays"
            android:icon="@drawable/ic_birthdays"
            android:title="@string/nav_drawer_birthdays"/>
        <item
            android:id="@+id/nav_drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_drawer_settings"/>
    </group>
</menu>
